--- a/_layouts/page404.html
+++ b/_layouts/page404.html
@@ -3,5 +3,11 @@ layout: default
 ---
 {% for node in page.jekyll-theme-jdw_heaven.page404.prepend %}
 {{ node }}
+```js
+// 404 page not found.
+if (!found) {
+  throw ("(╯°□°)╯︵ ┻━┻");
+}
+```
 {% endfor %}
 {{ content }}
