--- a/_layouts/page404.html
+++ b/_layouts/page404.html
@@ -2,6 +2,6 @@
 layout: default
 ---
 {% for node in page.jekyll-theme-jdw_heaven.page404.prepend %}
-{{ node }}
+{{ node }}<br>
 {% endfor %}
 {{ content }}
