--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,36 +1,44 @@
 ---
 layout: default
 ---
-{% for node in page.jekyll-theme-jdw_heaven.page.prepend %}
-{{ node }}
-{% endfor %}
-{% if page.jekyll-theme-jdw_heaven.page.masthead.enable %}
-<div class="masthead">
-  <div class="container">
-    <h3 class="masthead-title">
-      <a href="{{ site.baseurl }}/" title="Home">{{ site.title }}</a>
-      <small>{{ site.tagline }}</small>
-    </h3>
+{% assign mid_content = content | replace: '<table>', '<div class="table-container"><table>' %}
+{% assign new_content = mid_content | replace: '</table>', '</table></div>' %}
+
+  {% for node in page.jekyll-theme-jdw_heaven.page.prepend %}
+    {{ node }}
+  {% endfor %}
+  
+  {% if page.jekyll-theme-jdw_heaven.page.masthead.enable %}
+    <div class="masthead">
+      <div class="container">
+        <h3 class="masthead-title">
+          <a href="{{ site.baseurl }}/" title="Home">{{ site.title }}</a>
+          <small>{{ site.tagline }}</small>
+        </h3>
+      </div>
+    </div>
+  {% endif %}
+  
+  <div class="container content">
+    <div class="page">
+      {% if page.jekyll-theme-jdw_heaven.page.title.enable %}
+        <h1 class="page-title">{{ page.title }}</h1>
+      {% endif %}
+      {{ new_content }}
+    </div>
   </div>
-</div>
-{% endif %}
-<div class="container content">
-  <div class="page">
-    {% if page.jekyll-theme-jdw_heaven.page.title.enable %}
-    <h1 class="page-title">{{ page.title }}</h1>
+  
+  {% for p in page.jekyll-theme-jdw_heaven.page.plugin %}
+    {% if p.enable == false %}{% continue %}{% endif %}
+    {% if p.smart_include.enable %}
+      {% unless content contains p.smart_include.key %}
+        {% continue %}
+      {% endunless %}
     {% endif %}
-    {{ content }}
-  </div>
-</div>
-{% for p in page.jekyll-theme-jdw_heaven.page.plugin %}
-{% if p.enable == false %}{% continue %}{% endif %}
-{% if p.smart_include.enable %}
-{% unless content contains p.smart_include.key %}
-{% continue %}
-{% endunless %}
-{% endif %}
-{{ p.append }}
-{% endfor %}
-{% for node in page.jekyll-theme-jdw_heaven.page.append %}
-{{ node }}
-{% endfor %}
+    {{ p.append }}
+  {% endfor %}
+  
+  {% for node in page.jekyll-theme-jdw_heaven.page.append %}
+    {{ node }}
+  {% endfor %}
+  
